--- a/NextJS/Prototype/prototype2/src/app/globals.css
+++ b/NextJS/Prototype/prototype2/src/app/globals.css
@@ -49,3 +49,11 @@
     @apply bg-background text-foreground;
   }
 }
+
+.node {
+  background-color: #000000;
+}
+
+.line {
+  background-color: #000000;
+}
