--- a/NextJS/Prototype/prototype2/src/app/globals.css
+++ b/NextJS/Prototype/prototype2/src/app/globals.css
@@ -57,3 +57,35 @@
 .line {
   background-color: #000000;
 }
+
+.border-animation {
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+}
+
+.border-animation::before {
+  content: '';
+  position: absolute;
+  inset: 0;
+  border: 3px solid transparent;
+  border-radius: 0rem;
+  background: rgba(0, 0, 255, 0.1); /* Add a semi-transparent background */
+  animation: borderAnimate 5s ease-in-out infinite; /* Adjusted timing and easing */
+  z-index: -1;
+}
+
+@keyframes borderAnimate {
+  0% {
+    border-color: #4237d9;
+  }
+  33% {
+    border-color: #d34457;
+  }
+  66% {
+    border-color: #37d9a3;
+  }
+  100% {
+    border-color: #4237d9;
+  }
+}
