--- a/NextJS/Prototype/prototype2/src/app/globals.css
+++ b/NextJS/Prototype/prototype2/src/app/globals.css
@@ -50,6 +50,63 @@
   }
 }
 
+@keyframes pulse {
+  0%, 100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+}
+
+@keyframes animate-jump-in {
+  0% {
+    transform: translateY(100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes animate-once {
+  0% {
+    transform: scale(0.5);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+
+.animate-once {
+  animation: animate-once 1s ease-out;
+}
+
+.animate-ease-in-out {
+  animation: animate-jump-in 1s ease-in-out;
+}
+
+
+.animate-jump-in {
+  animation: animate-jump-in 1s ease-out;
+}
+
+.animate-once {
+  animation: animate-once 1s ease-out;
+}
+
+.animate-ease-out {
+  animation: animate-once 1s ease-out;
+}
+
+.animate-pulse {
+  animation: pulse 4s linear;
+}
+
 .node {
   background-color: #000000;
 }
